[tool.poetry]
name = "habit-tracker-backend"
version = "0.1.0"
description = ""
authors = ["Aashir Israr <aashirisrar968@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jose = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
