[tool.poetry]
name = "habit-tracker-backend"
version = "0.1.0"
description = ""
authors = ["Aashir Israr <aashirisrar968@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jose = "^1.0.0"
crypto = "^1.4.1"
uvicorn = "^0.30.1"
fastapi = "^0.111.1"
sqlalchemy = "^2.0.31"
psycopg2 = "^2.9.9"
pycryptodome = "^3.20.0"
pyjwt = "^2.8.0"
passlib = "^1.7.4"
jwt = "^1.3.1"
python-jose = "^3.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
